# mycelium

./: .gitignore  Cargo.toml  README.md
assets/scripts/: default.lua
assets/shaders/: electric.wgsl  fractal.wgsl  kaleidoscope.wgsl  liquid.wgsl  nebula.wgsl  reaction_diffusion.wgsl  sdf_geometry.wgsl  strobe.wgsl  voronoi.wgsl  warp_tunnel.wgsl
config/: default.toml
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/audio/: Cargo.toml
crates/audio/src/: analysis.rs  capture.rs  lib.rs
crates/audio/tests/: analysis_test.rs  capture_test.rs
crates/core/: Cargo.toml
crates/core/src/: bus.rs  config.rs  config_watcher.rs  engine.rs  error.rs  event.rs  gpu.rs  lib.rs  mapping.rs  preset.rs  quad.rs
crates/core/tests/: bus_test.rs  config_test.rs  mapping_test.rs  preset_test.rs
crates/io/: Cargo.toml
crates/io/src/: gamepad.rs  lib.rs  midi.rs  osc.rs
crates/script/: Cargo.toml
crates/script/src/: lib.rs  lua.rs
crates/shaders/: Cargo.toml
crates/shaders/src/: effects.rs  lib.rs  registry.rs
crates/shaders/tests/: effects_test.rs  registry_test.rs
presets/: default.toml
