[package]
name = "core"
version.workspace = true
edition.workspace = true

[dependencies]
wgpu = { workspace = true }
naga = { workspace = true }
winit = { workspace = true }
raw-window-handle = { workspace = true }
crossbeam = { workspace = true }
arrayvec = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
notify = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
pollster = { workspace = true }
bytemuck = { workspace = true }
egui = { workspace = true }
egui-wgpu = { workspace = true }
egui-winit = { workspace = true }

[dev-dependencies]
tempfile = "3"
